Плавный скроллинг до блока результата после отработки спиннера с галочкой

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "dependencies": {
     "bootstrap": "latest",
+    "enquire.js": "^2.1.6",
     "gulp-favicons": "latest",
     "js-plugin-circliful": "^2.0.15",
     "magnific-popup": "latest",
